[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Projectiles/Proj-42-Turt-Shell-02.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Projectiles/Proj-42-Turt-Shell-01.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Guns/Pick/W_27_Turtle_Pick.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Spin"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Proj-42-Turt-Shell-01:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Proj-42-Turt-Shell-02:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 10 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 3.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 3.0
height = 16.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 4.39997
height = 11.2001

[sub_resource type="CapsuleShape2D" id=6]
radius = 1.4
height = 17.2

[node name="Weap-Pick-27-Turtle" type="KinematicBody2D" groups=[
"FX",
"PickUp",
]]
collision_layer = 512
collision_mask = 131608
script = ExtResource( 3 )

[node name="Proj-42-Turt-Shell-01" type="Sprite" parent="."]
self_modulate = Color( 0, 1, 0, 1 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 2 )
hframes = 8

[node name="Proj-42-Turt-Shell-02" type="Sprite" parent="."]
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 1 )
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Spin = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Left_Area" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 3598

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left_Area"]
position = Vector2( -14, 3 )
shape = SubResource( 3 )

[node name="Right_Area" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 2 )
collision_layer = 512
collision_mask = 3598

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right_Area"]
position = Vector2( 14, 3 )
shape = SubResource( 3 )

[node name="Top_Area" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 2 )
collision_layer = 512
collision_mask = 3598

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top_Area"]
position = Vector2( 0, -9 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Bottom_Area" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 2 )
collision_layer = 512
collision_mask = 3598

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom_Area"]
position = Vector2( 0, 11 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Top_Stop_Area" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top_Stop_Area"]
position = Vector2( 0, -10.4 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="Left_Kick_Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left_Kick_Area"]
position = Vector2( -12, -1 )
shape = SubResource( 6 )

[node name="Right_Kick_Area" type="Area2D" parent="."]
position = Vector2( 24, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right_Kick_Area"]
position = Vector2( -12, -1 )
shape = SubResource( 6 )

[node name="Cast_Down" type="RayCast2D" parent="."]
position = Vector2( 0, 7 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 2078

[node name="Cast_Up" type="RayCast2D" parent="."]
position = Vector2( 0, -6 )
enabled = true
cast_to = Vector2( 0, -5 )
collision_mask = 2078
[connection signal="body_entered" from="Left_Area" to="." method="_on_Left_Area_body_entered"]
[connection signal="body_entered" from="Right_Area" to="." method="_on_Right_Area_body_entered"]
[connection signal="body_entered" from="Top_Area" to="." method="_on_Top_Area_body_entered"]
[connection signal="body_entered" from="Bottom_Area" to="." method="_on_Bottom_Area_body_entered"]
[connection signal="body_entered" from="Top_Stop_Area" to="." method="_on_Top_Stop_Area_body_entered"]
[connection signal="body_entered" from="Left_Kick_Area" to="." method="_on_Left_Kick_Area_body_entered"]
[connection signal="body_entered" from="Right_Kick_Area" to="." method="_on_Right_Kick_Area_body_entered"]
